Hook up solr query in search.py

--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,13 +236,17 @@
      "text": [
       "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 100 -train data/genre_by_date_judgments_train.txt -save data/genre_model.txt\n",
       "DONE\n",
-      "Delete model genre: 200\n",
-      "Created model genre: 201\n",
+      "{\n",
+      "  \"responseHeader\":{\n",
+      "    \"status\":0,\n",
+      "    \"QTime\":22}}\n",
+      "\n",
+      "PUT genre model under genre: 200\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 30989934.22204985\n",
-      "2 - 2891683.161237409\n",
-      "3 - 24.47444925009026\n",
+      "2 - 69637125.91395159\n",
+      "1 - 4343523.117296852\n",
+      "3 - 243.4263191311367\n",
       "4 - 0.0\n",
       "Perfect NDCG! 1.0\n"
      ]
@@ -273,43 +277,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Science Fiction\"}, \"model\": \"genre\"}}}\n",
-      "Why Him? \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Comedy'] \n",
-      "Ned, an overprotective dad, visits his daughter at Stanford where he meets his biggest nightmare: her well-meaning but socially awkward Silicon Valley billionaire boyfriend, Laird. A rivalry develops and Ned's panic level goes through the roof when he finds himself lost in this glamorous high-tech world and learns Laird is about to pop the question. \n",
+      "['The General'] \n",
+      "6.6352477 \n",
+      "1926 \n",
+      "['Western', 'Adventure', 'Drama', 'Action', 'Comedy', 'War'] \n",
+      "['The General is a 1927 American silent film comedy from Buster Keaton. The film flopped when first released but is now regarded as the height of silent film comedy. The film is based on events from America’s civil war.'] \n",
       "---------------------------------------\n",
-      "X-Men: Apocalypse \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Science Fiction'] \n",
-      "After the re-emergence of the world's first mutant, world-destroyer Apocalypse, the X-Men must unite to defeat his extinction level plan. \n",
+      "['The Kid'] \n",
+      "3.1759663 \n",
+      "1921 \n",
+      "['Comedy', 'Drama'] \n",
+      "[\"Considered one of Charlie Chaplin's best films, The Kid also made a star of little Jackie Coogan, who plays a boy cared for by The Tramp when he's abandoned by his mother, Edna. Later, Edna has a change of heart and aches to be reunited with her son. When she finds him and wrests him from The Tramp, it makes for what turns out be one of the most heart-wrenching scenes ever included in a comedy.\"] \n",
       "---------------------------------------\n",
-      "I Am Not a Serial Killer \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Horror', 'Thriller'] \n",
-      "Fifteen-year old John Cleaver is dangerous, and he knows it. He’s obsessed with serial killers, but really doesn’t want to become one. Terrible impulses constantly tempt him, so for his own sake, and the safety of those around, he lives by rigid rules to keep himself “good” and “normal”. However, when a real monster shows up in his town he has to let his dark side out in order to stop it – but without his rules to keep him in check, he might be more dangerous than the monster he’s trying to kill. \n",
+      "['Sherlock, Jr.'] \n",
+      "2.7476196 \n",
+      "1924 \n",
+      "['Fantasy', 'Drama', 'Comedy', 'Mystery'] \n",
+      "[\"A film projectionist longs to be a detective, and puts his meagre skills to work when he is framed by a rival for stealing his girlfriend's father's pocketwatch.\"] \n",
       "---------------------------------------\n",
-      "Tamara \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Comedy'] \n",
-      "Tamara, 15, complexed with her curves, decided its entry into second to get rid of the label of \"big\". To shut up the gossip, she made a bet with her best friend to go out with the first boy who pass the classroom door. No luck, the boy turns out to be Diego, the most handsome guy of high school. The bet is complicated for Tamara .... Between the dirty tricks of bitches of high school, a mother hen, boards \"drag\" his little sister, Tamara is a memorable year! \n",
+      "['Guardians of the Galaxy'] \n",
+      "2.3438466 \n",
+      "2014 \n",
+      "['Action', 'Science Fiction', 'Adventure'] \n",
+      "['Light years from Earth, 26 years after being abducted, Peter Quill finds himself the prime target of a manhunt after discovering an orb wanted by Ronan the Accuser.'] \n",
       "---------------------------------------\n",
-      "The Neon Demon \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Thriller', 'Horror'] \n",
-      "When aspiring model Jesse moves to Los Angeles, her youth and vitality are devoured by a group of beauty-obsessed women who will take any means necessary to get what she has. \n",
+      "['World of Tomorrow'] \n",
+      "1.8633366 \n",
+      "2015 \n",
+      "['Animation', 'Comedy', 'Science Fiction'] \n",
+      "['A little girl is contacted by a mysterious woman.'] \n",
       "---------------------------------------\n"
      ]
     }
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -353,14 +356,14 @@
       "REBUILDING TRAINING DATA for Drama (1/2)\n",
       "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 100 -train data/genre_by_date_judgments_train.txt -save data/genre_model.txt\n",
       "DONE\n",
-      "Delete model genre: 200\n",
-      "Created model genre: 201\n",
+      "Deleted genre model [200]\n",
+      "PUT genre model under genre: 200\n",
       "\n",
       "Impact of each feature on the model\n",
-      "4 - 802616758.725657\n",
-      "1 - 89257217.35776828\n",
-      "3 - 1573733.5830246205\n",
-      "2 - 1.953984578809708e-20\n",
+      "4 - 561061180.8468233\n",
+      "1 - 1707216.1348845295\n",
+      "2 - 820.3178113177884\n",
+      "3 - 44.640347891206886\n",
       "Perfect NDCG! 1.0\n"
      ]
     }
@@ -399,43 +402,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Science Fiction\"}, \"model\": \"genre\"}}}\n",
-      "X-Men: Apocalypse \n",
-      "10.714813 \n",
-      "2016 \n",
-      "['Science Fiction'] \n",
-      "After the re-emergence of the world's first mutant, world-destroyer Apocalypse, the X-Men must unite to defeat his extinction level plan. \n",
+      "['Guardians of the Galaxy'] \n",
+      "4.020194 \n",
+      "2014 \n",
+      "['Action', 'Science Fiction', 'Adventure'] \n",
+      "['Light years from Earth, 26 years after being abducted, Peter Quill finds himself the prime target of a manhunt after discovering an orb wanted by Ronan the Accuser.'] \n",
       "---------------------------------------\n",
-      "Spectral \n",
-      "10.714813 \n",
-      "2016 \n",
-      "['Thriller', 'Action', 'Science Fiction'] \n",
-      "A special-ops team is dispatched to fight supernatural beings that have taken over a European city. \n",
+      "['World of Tomorrow'] \n",
+      "3.689034 \n",
+      "2015 \n",
+      "['Animation', 'Comedy', 'Science Fiction'] \n",
+      "['A little girl is contacted by a mysterious woman.'] \n",
       "---------------------------------------\n",
-      "Transformers: The Last Knight \n",
-      "10.714813 \n",
+      "['Doctor Who: The Day of the Doctor'] \n",
+      "3.5284767 \n",
+      "2013 \n",
+      "['Science Fiction', 'Adventure'] \n",
+      "[\"In 2013, something terrible is awakening in London's National Gallery; in 1562, a murderous plot is afoot in Elizabethan England; and somewhere in space an ancient battle reaches its devastating conclusion. All of reality is at stake as the Doctor's own dangerous past comes back to haunt him.\"] \n",
+      "---------------------------------------\n",
+      "['Okja'] \n",
+      "-3.8640637 \n",
       "2017 \n",
-      "['Action', 'Science Fiction', 'Thriller', 'Adventure'] \n",
-      "Autobots and Decepticons are at war, with humans on the sidelines. Optimus Prime is gone. The key to saving our future lies buried in the secrets of the past, in the hidden history of Transformers on Earth. \n",
+      "['Action', 'Science Fiction', 'Drama', 'Adventure'] \n",
+      "['A young girl named Mija risks everything to prevent a powerful, multi-national company from kidnapping her best friend - a massive animal named Okja.'] \n",
       "---------------------------------------\n",
-      "Life \n",
-      "10.714813 \n",
-      "2017 \n",
-      "['Horror', 'Science Fiction', 'Thriller'] \n",
-      "The six-member crew of the International Space Station is tasked with studying a sample from Mars that may be the first proof of extra-terrestrial life, which proves more intelligent than ever expected. \n",
-      "---------------------------------------\n",
-      "Monster Trucks \n",
-      "10.714813 \n",
-      "2016 \n",
-      "['Action', 'Comedy', 'Science Fiction'] \n",
-      "Looking for any way to get away from the life and town he was born into, Tripp, a high school senior, builds a Monster Truck from bits and pieces of scrapped cars. After an accident at a nearby oil-drilling site displaces a strange and subterranean creature with a taste and a talent for speed, Tripp may have just found the key to getting out of town and a most unlikely friend. \n",
+      "['Metropolis'] \n",
+      "-5.2269106 \n",
+      "1927 \n",
+      "['Drama', 'Science Fiction'] \n",
+      "[\"In a futuristic city sharply divided between the working class and the city planners, the son of the city's mastermind falls in love with a working class prophet who predicts the coming of a savior to mediate their differences.\"] \n",
       "---------------------------------------\n"
      ]
     }
