Default value for elastic log_query params

--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -28430,7 +28430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28484,7 +28484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28513,7 +28513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28533,10 +28533,10 @@
     {
      "data": {
       "text/plain": [
-       "<ltr.train.TrainingLog at 0x11f119eb8>"
+       "<ltr.train.TrainingLog at 0x10fcbb3c8>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28557,7 +28557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28585,7 +28585,7 @@
          "mode": "lines",
          "name": "classic",
          "type": "scatter",
-         "uid": "33cc04bb-3d4f-4342-ad7a-4b4de1b5dbed",
+         "uid": "46b81550-2954-42ee-aa12-5622687b0e33",
          "x": [
           0,
           1,
@@ -28655,7 +28655,7 @@
          "mode": "lines",
          "name": "latest",
          "type": "scatter",
-         "uid": "f27817d9-c7e2-445a-80a2-df139ca41b9d",
+         "uid": "7e14fa13-a27d-46eb-b599-d9f8deae919e",
          "x": [
           0,
           1,
@@ -28725,18 +28725,18 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\")) {\n",
-       "    Plotly.newPlot(\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1966\", \"1949\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2005\", \"1993\", \"1992\", \"2008\", \"2009\", \"2008\", \"1989\", \"2010\", \"2010\", \"2014\", \"2017\", \"2011\", \"2014\", \"2016\", \"2016\", \"2013\", \"2012\", \"2015\", \"2016\", \"2013\"], \"type\": \"scatter\", \"uid\": \"33cc04bb-3d4f-4342-ad7a-4b4de1b5dbed\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2015\", \"2011\", \"2017\", \"2014\", \"2014\", \"2016\", \"2016\", \"2013\", \"2012\", \"2016\", \"2013\", \"2010\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2010\", \"2005\", \"1993\", \"1992\", \"2008\", \"2009\", \"2008\", \"1989\", \"1966\", \"1949\", \"1943\"], \"type\": \"scatter\", \"uid\": \"f27817d9-c7e2-445a-80a2-df139ca41b9d\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\")) {\n",
+       "    Plotly.newPlot(\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1966\", \"1949\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2005\", \"1993\", \"1992\", \"2008\", \"2009\", \"2008\", \"1989\", \"2010\", \"2010\", \"2014\", \"2017\", \"2011\", \"2014\", \"2016\", \"2016\", \"2013\", \"2012\", \"2015\", \"2016\", \"2013\"], \"type\": \"scatter\", \"uid\": \"46b81550-2954-42ee-aa12-5622687b0e33\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2015\", \"2011\", \"2017\", \"2014\", \"2014\", \"2016\", \"2016\", \"2013\", \"2012\", \"2016\", \"2013\", \"2010\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2010\", \"2005\", \"1993\", \"1992\", \"2008\", \"2009\", \"2008\", \"1989\", \"1966\", \"1949\", \"1943\"], \"type\": \"scatter\", \"uid\": \"7e14fa13-a27d-46eb-b599-d9f8deae919e\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\")) {window._Plotly.Plots.resize(document.getElementById(\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\")) {window._Plotly.Plots.resize(document.getElementById(\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\"));};})</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\")) {\n",
-       "    Plotly.newPlot(\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1966\", \"1949\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2005\", \"1993\", \"1992\", \"2008\", \"2009\", \"2008\", \"1989\", \"2010\", \"2010\", \"2014\", \"2017\", \"2011\", \"2014\", \"2016\", \"2016\", \"2013\", \"2012\", \"2015\", \"2016\", \"2013\"], \"type\": \"scatter\", \"uid\": \"33cc04bb-3d4f-4342-ad7a-4b4de1b5dbed\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2015\", \"2011\", \"2017\", \"2014\", \"2014\", \"2016\", \"2016\", \"2013\", \"2012\", \"2016\", \"2013\", \"2010\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2010\", \"2005\", \"1993\", \"1992\", \"2008\", \"2009\", \"2008\", \"1989\", \"1966\", \"1949\", \"1943\"], \"type\": \"scatter\", \"uid\": \"f27817d9-c7e2-445a-80a2-df139ca41b9d\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\")) {\n",
+       "    Plotly.newPlot(\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1966\", \"1949\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2005\", \"1993\", \"1992\", \"2008\", \"2009\", \"2008\", \"1989\", \"2010\", \"2010\", \"2014\", \"2017\", \"2011\", \"2014\", \"2016\", \"2016\", \"2013\", \"2012\", \"2015\", \"2016\", \"2013\"], \"type\": \"scatter\", \"uid\": \"46b81550-2954-42ee-aa12-5622687b0e33\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2015\", \"2011\", \"2017\", \"2014\", \"2014\", \"2016\", \"2016\", \"2013\", \"2012\", \"2016\", \"2013\", \"2010\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2010\", \"2005\", \"1993\", \"1992\", \"2008\", \"2009\", \"2008\", \"1989\", \"1966\", \"1949\", \"1943\"], \"type\": \"scatter\", \"uid\": \"7e14fa13-a27d-46eb-b599-d9f8deae919e\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\")) {window._Plotly.Plots.resize(document.getElementById(\"f4120f0b-fd9f-4ae9-aea5-c081cf03842d\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\")) {window._Plotly.Plots.resize(document.getElementById(\"4c5e3ba9-0e1f-4940-ab58-c63abc4db0dc\"));};})</script>"
       ]
      },
      "metadata": {},
