--- a/hello-ltr (Solr).ipynb
+++ b/hello-ltr (Solr).ipynb
@@ -27,6 +27,7 @@
      "text": [
       "GET http://es-learn-to-rank.labs.o19s.com/tmdb.json\n",
       "GET http://es-learn-to-rank.labs.o19s.com/RankyMcRankFace.jar\n",
+      "GET http://es-learn-to-rank.labs.o19s.com/title_judgments.txt\n",
       "Done.\n"
      ]
     }
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -314,13 +315,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Logging Query\n",
+    "http://localhost:8983/solr/tmdb/select?q=*:*&fl=title,genres,release_year,[features%20store=release]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Train and Submit\n",
     "Using the training data from the previous step, we'll use RankyMcRankFace to spit out two LambaMART models.  Once these files are generated, we can then submit them to elastic to be used in scoring."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -329,19 +338,21 @@
      "text": [
       "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/latest-training.txt -save data/latest_model.txt\n",
       "DONE\n",
+      "Deleted latest model [200]\n",
       "PUT latest model under release: 200\n",
       "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/classic-training.txt -save data/classic_model.txt\n",
       "DONE\n",
+      "Deleted classic model [200]\n",
       "PUT classic model under release: 200\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ltr.train.TrainingLog at 0x12a0a9f28>"
+       "<ltr.train.TrainingLog at 0x12bca78d0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +401,7 @@
          "mode": "lines",
          "name": "classic",
          "type": "scatter",
-         "uid": "ed001155-5e9f-474c-9127-e806e6c932b9",
+         "uid": "142ee0be-6cc2-46ae-a32a-7cf301c1af87",
          "x": [
           0,
           1,
@@ -434,15 +445,15 @@
           2012,
           2010,
           2005,
-          1998,
-          1998,
-          1997,
           2011,
           2010,
           2008,
           2009,
-          2005,
           2008,
+          1997,
+          1998,
+          1998,
+          2005,
           2003,
           2013,
           1993,
@@ -460,7 +471,7 @@
          "mode": "lines",
          "name": "latest",
          "type": "scatter",
-         "uid": "4886feb6-6a32-449e-b61d-b7ec88a1343f",
+         "uid": "c6a76b08-9cce-4703-b300-408bc7d182b0",
          "x": [
           0,
           1,
@@ -508,15 +519,15 @@
           2000,
           2010,
           2005,
-          1998,
-          1998,
-          1997,
           2010,
           2008,
           2009,
-          2005,
           2008,
           1995,
+          1997,
+          1998,
+          1998,
+          2005,
           2003,
           1993,
           1992,
@@ -530,18 +541,18 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"20b3f0b4-d674-47ec-9542-6df0c8baff38\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\")) {\n",
-       "    Plotly.newPlot(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 1998, 1998, 1997, 2011, 2010, 2008, 2009, 2005, 2008, 2003, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"ed001155-5e9f-474c-9127-e806e6c932b9\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 1998, 1998, 1997, 2010, 2008, 2009, 2005, 2008, 1995, 2003, 1993, 1992, 1949, 1966, 1943, 1989], \"type\": \"scatter\", \"uid\": \"4886feb6-6a32-449e-b61d-b7ec88a1343f\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"09306a2b-bc3e-4c66-9527-ca4a6e810882\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\")) {\n",
+       "    Plotly.newPlot(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 2011, 2010, 2008, 2009, 2008, 1997, 1998, 1998, 2005, 2003, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"142ee0be-6cc2-46ae-a32a-7cf301c1af87\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 2010, 2008, 2009, 2008, 1995, 1997, 1998, 1998, 2005, 2003, 1993, 1992, 1949, 1966, 1943, 1989], \"type\": \"scatter\", \"uid\": \"c6a76b08-9cce-4703-b300-408bc7d182b0\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\")) {window._Plotly.Plots.resize(document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\")) {window._Plotly.Plots.resize(document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\"));};})</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"20b3f0b4-d674-47ec-9542-6df0c8baff38\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\")) {\n",
-       "    Plotly.newPlot(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 1998, 1998, 1997, 2011, 2010, 2008, 2009, 2005, 2008, 2003, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"ed001155-5e9f-474c-9127-e806e6c932b9\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 1998, 1998, 1997, 2010, 2008, 2009, 2005, 2008, 1995, 2003, 1993, 1992, 1949, 1966, 1943, 1989], \"type\": \"scatter\", \"uid\": \"4886feb6-6a32-449e-b61d-b7ec88a1343f\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"09306a2b-bc3e-4c66-9527-ca4a6e810882\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\")) {\n",
+       "    Plotly.newPlot(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 2011, 2010, 2008, 2009, 2008, 1997, 1998, 1998, 2005, 2003, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"142ee0be-6cc2-46ae-a32a-7cf301c1af87\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 2010, 2008, 2009, 2008, 1995, 1997, 1998, 1998, 2005, 2003, 1993, 1992, 1949, 1966, 1943, 1989], \"type\": \"scatter\", \"uid\": \"c6a76b08-9cce-4703-b300-408bc7d182b0\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\")) {window._Plotly.Plots.resize(document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\")) {window._Plotly.Plots.resize(document.getElementById(\"09306a2b-bc3e-4c66-9527-ca4a6e810882\"));};})</script>"
       ]
      },
      "metadata": {},
@@ -554,11 +565,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "### Model Query\n",
+    "http://localhost:8983/solr/tmdb/select?rq={!ltr%20model=latest}&q=batman&fl=title,release_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
